added space complexity analisis

--- a/benchmarks/time/Makefile.test
+++ b/benchmarks/time/Makefile.test
@@ -1,7 +1,7 @@
 cc := clang++
-ccflags := -std=c++11 -isystem benchmark/include -O3
+ccflags := -std=c++11 -isystem benchmark/include -O3 
 lflags := -lbenchmark -lpthread 
-src := ../../src/graph.cpp
+src := ../../../src/graph.cpp
 obj := $(patsubst %.cpp, %.o, $(wildcard *.cpp))
 rm := rm -f
 
