--- a/benchmarks/space/Makefile.test
+++ b/benchmarks/space/Makefile.test
@@ -1,12 +1,13 @@
 cc := clang++
-ccflags := -O3 -g
+ccflags := -std=c++20 -O3 -flto 
+lflags := -flto
 src := ../../../src/graph.cpp
 obj := $(patsubst %.cpp, %.o, $(wildcard *.cpp))
 rm := rm -f
 out_name := benchmark_space
 
 benchmark: $(obj)
-	$(cc) -o $(out_name) $(obj) graph.o  
+	$(cc) -o $(out_name) $(obj) graph.o  $(lflags)
 	valgrind --tool=massif --massif-out-file=mem_report ./$(out_name)
 	ms_print mem_report | head -30
 	
